--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit>=1.18.0
 pandas>=1.3.0
 numpy>=1.21.0
-scikit-learn>=1.0
+scikit-learn==1.3.2
 matplotlib>=3.4.0
 seaborn>=0.11.0
 joblib>=1.1.0
